--- a/common/build.gradle
+++ b/common/build.gradle
@@ -3,6 +3,9 @@ plugins {
 }
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.sweven-tears'
 
 android {
     buildFeatures {
