--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.longyiyiyao.shop.durgshop"
+            android:authorities="com.app.test"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
