--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply from: "config.gradle"
 buildscript {
+    ext.config = rootProject.ext
     ext.kotlin_version = '1.5.30-M1'
     repositories {
         google()
