--- a/common/build.gradle
+++ b/common/build.gradle
@@ -52,6 +52,9 @@ android {
 dependencies {
     implementation fileTree(includes: ['*.jar'], dir: 'libs')
 
+    implementation 'androidx.activity:activity:1.3.1'
+    implementation 'androidx.fragment:fragment:1.3.6'
+
     implementation config.dependencies["appcompat"]
     implementation config.dependencies["meterial"]
     implementation config.dependencies["constraintlayout"]
