--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
 //        maven { url 'https://dl.bintray.com/umsdk/release' }
         maven { url 'https://repos.spark-packages.org'}
