--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,18 @@
 apply from: "config.gradle"
 buildscript {
     ext.config = rootProject.ext
-    ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = '1.5.30-M1'
     repositories {
         google()
+        mavenCentral()
         jcenter()
 //        maven { url 'https://dl.bintray.com/umsdk/release' }
         maven { url 'https://repos.spark-packages.org'}
+        maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+        classpath "com.android.tools.build:gradle:4.1.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 
 //        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
