--- a/config.gradle
+++ b/config.gradle
@@ -1,16 +1,16 @@
 ext {
     android = [
-            compileSdkVersion  : 29,
+            compileSdkVersion  : 30,
             buildToolsVersion  : "29.0.3",
             minSdkVersion      : 22,
-            targetSdkVersion   : 29,
+            targetSdkVersion   : 30,
             versionCode        : 1,
             versionName        : "1.0",
             sourceCompatibility: JavaVersion.VERSION_1_8,
             targetCompatibility: JavaVersion.VERSION_1_8
     ]
 
-    kotlin = '1.6.10'
+    kotlin = '1.5.30-M1'
 
     signConf = [
             "storeFile"    : 'test.jks',
