优化toJson，onClick，BaseAdapter的Holder初始化

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,6 @@ dependencies {
     implementation rootProject.ext.dependencies["smart-refresh-kernel"]
 
     implementation project(':common')
+
+//    implementation 'com.github.sweven-tears:Album:1.1.0'
 }
