libs.versions.toml 的认识

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -70,7 +70,7 @@ dependencies {
     api config.dependencies['okhttp']
 
     implementation config.dependencies['glide']
-    kotlin-kapt config.dependencies['glide-compiler']
+    kapt config.dependencies['glide-compiler']
 
     api config.dependencies['retrofit']
     api config.dependencies['logging-intercepter']
