--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,13 @@
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+        maven { url "https://oss.sonatype.org/content/groups/public" }
+    }
+}
+
 rootProject.name = "swevenbase"
-include ':common'
-include ':app'
+include(":app")
+include(":common")
